Docker, Kubernetes, Swarm/5. Kubernetes Hands On/25. Cert-manager. Настройка HTTPS. Wildcard сертификаты. DNS01 Challenge. AWS Route53/k8s/example-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-bakavets-ingress
  namespace: demo
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-issuer
spec:
  ingressClassName: nginx # replacement of annotation: kubernetes.io/ingress.class: nginx
  tls:
    - hosts:
        - demo.k8s.bakavets.com
      secretName: app-tls-bakavets
  rules:
    - host: demo.k8s.bakavets.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
